--- a/DatingApp-SPA/src/app/app.component.html
+++ b/DatingApp-SPA/src/app/app.component.html
@@ -1,3 +1,4 @@
 <app-nav></app-nav>
-<h1>Dating App</h1>
-<app-value></app-value>
+<app-home></app-home>
+<!-- <h1>Dating App</h1>
+<app-value></app-value> -->
